# cfddns

./: Cargo.toml  default.nix  flake.nix  shell.nix
src/: args.rs  cloudflare.rs  config.rs  ip.rs  main.rs
