[package]
name = "cfddns"
version = "0.1.0"
edition = "2021"
description = "Manage dynamic dns records in cloudflare"

[dependencies]
anyhow = "1.0.66"
backtraceio = { git = "https://github.com/Church-/backtrace-rust.git" }
clap = { version = "4.0.18", features = ["derive"] }
gethostname = "0.3.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
